Finish prototype of dynamic injection

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,8 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/sohookd",
-            "args": ["-s", "${workspaceFolder}/test.so", "${workspaceFolder}/target"],
-            "stopAtEntry": true,
+            "args": ["-d", "-s", "${workspaceFolder}/test.so", "${workspaceFolder}/target"],
+            "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
