Fixup relocation program header vm_mapping Implement DEFINE_FUNC

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,10 @@
                 {
                     "text": "-gdb-set disassembly-flavor intel",
                     "ignoreFailures": true
+                },
+                {
+                    "text": "-gdb-set output-radix 16",
+                    "ignoreFailures": true
                 }
             ],
             "preLaunchTask": "build",
